Fixes malfformed intro image on mobile

--- a/src/_assets/css/_grid.scss
+++ b/src/_assets/css/_grid.scss
@@ -49,6 +49,12 @@ $grid-columns-double-standard: 2 * ($grid-columns-standard - 1);
   grid-column-start: 2;
 }
 
+.grid-span-col-start-8-tablet {
+  @include for-tablet-up {
+    grid-column-start: 8;
+  }
+}
+
 .grid-span-cols-2 {
   grid-column-end: span 2;
 }
